# BrokenTrade-integrated-

./: .gitignore  README.md  package-lock.json  package.json
BrokenTrade.com/: .gitignore
paperTrading/backtester/: __init__.py  main.py  pyproject.toml  websocket_client.py
paperTrading/backtester/src/data/: base.py
paperTrading/backtester/src/data/feeds/: databaseAccessor.py
paperTrading/backtester/src/handlers/: __init__.py  base.py  dispatcher.py  indicator_handler.py
paperTrading/backtester/src/indicators/: __init__.py  base.py  bbands.py  currencyStrength.py  macd.py  sma.py
paperTrading/backtester/src/portfolio/: base.py
paperTrading/backtester/src/signals/: signal.py
paperTrading/backtester/src/utils/: ticket.py
paperTrading/backtester/test/signals/: test_signals.py
paperTrading/broker-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
paperTrading/broker-service/app/: __init__.py  main.py  settings.py
paperTrading/broker-service/app/api/: contracts.py  serialization.py  validation.py
paperTrading/broker-service/app/api/routers/: accounts.py  deals.py  market_data.py  meta.py  orders.py  positions.py
paperTrading/broker-service/app/application/: interfaces.py
paperTrading/broker-service/app/application/services/: market_data_service.py  trade_service.py
paperTrading/broker-service/app/domain/: value_objects.py
paperTrading/broker-service/app/domain/models/: account.py  deal.py  order.py  position.py  symbol.py  tick.py  trade.py  trendbar.py
paperTrading/broker-service/app/infrastructure/: config.py  ctrader_client.py  ctrader_mappers.py  ctrader_oauth_client.py  ctrader_symbol_cache.py  logging.py  redis_streams_publisher.py  stream_registry.py  token_lifecycle.py  token_repository.py  trendbar_stream_registry.py
paperTrading/broker-service/tests/: run_tests.py
paperTrading/broker-service/tests/api/: test_serialization.py  test_validation.py
paperTrading/broker-service/tests/api/routers/: fakes.py  test_accounts.py  test_deals.py  test_market_data.py  test_meta.py  test_orders.py  test_positions.py
paperTrading/broker-service/tests/infrastructure/: test_token_lifecycle.py  test_token_repository.py  test_trendbar_stream_registry.py
paperTrading/indicator-api/: .dockerignore  Dockerfile  __init__.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
paperTrading/indicator-api/app/: __init__.py  candles.py  schemas.py  schemas_live.py  ui_metadata.py  utils.py
paperTrading/indicator-api/app/routes/: __init__.py  indicators.py  live_indicator_streams.py  system.py
paperTrading/indicator-api/app/services/: __init__.py  candle_cache.py  historical_indicator_service.py  live_indicator_manager.py
paperTrading/libs/algotrader_logger/: pyproject.toml
paperTrading/libs/algotrader_logger/algotrader_logger/: __init__.py  core.py
paperTrading/libs/algotrader_logger/algotrader_logger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
paperTrading/libs/algotrader_logger/tests/: test_core.py
paperTrading/libs/db_accessor_client/: pyproject.toml
paperTrading/libs/db_accessor_client/db_accessor_client/: __init__.py  client.py  errors.py  timeframes.py
paperTrading/libs/db_accessor_client/db_accessor_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
paperTrading/libs/db_accessor_client/tests/: test_client.py
paperTrading/libs/indicator_engine/: README.md  pyproject.toml
paperTrading/libs/indicator_engine/indicator_engine/: __init__.py  defaults.py
paperTrading/libs/indicator_engine/indicator_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
paperTrading/libs/indicator_engine/indicator_engine/adapters/: __init__.py  dataframe.py  pandas.py
paperTrading/libs/indicator_engine/indicator_engine/core/: __init__.py  bars.py  history.py  params.py  registry.py  results.py  spec.py  state.py  tensor.py
paperTrading/libs/indicator_engine/indicator_engine/engines/: __init__.py  batch.py  update.py
paperTrading/libs/indicator_engine/tests/: test_defaults.py
(+245 files in other folders)
