[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "broker-service"
version = "0.0.0"
description = "FastAPI broker microservice for cTrader Open API"
authors = [{ name = "Sebastian Stolz" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.40.0",
  "redis>=7.1.0",
  "ctrader-open-api>=0.9.2",
  "service_identity>=24.2.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.14.11",
  "black>=24.4.2",
]

[project.scripts]
broker-service = "app.main:run"
broker-service-test = "tests.run_tests:main"
lint = "ruff check app/ *.py && black --check app/ *.py"
lint-fix = "ruff check --fix app/ *.py && black app/ *.py"
