[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algotrader-logger"
version = "0.1.0"
description = "Shared logging package for algotrader Python services"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["algotrader_logger*"]
